...
                hostState = snackbarHostState,
                modifier = Modifier.testTag("profile-creation-snackbar")
            )
        }
    ) { innerPadding ->
        Box(
            modifier = modifier.fillMaxSize().padding(innerPadding).testTag("profile-creation"),
            contentAlignment = Alignment.Center
        ) {
            Column(
                modifier =
                    modifier
                        .fillMaxSize()
...
                        ProfilePictureEdit(picture, onPictureChange)

                        // First name and last name fields
                        OutlinedTextField(
                            value = firstName,
                            onValueChange = { onFirstNameChange(it) },
                            modifier = modifier.fillMaxWidth().testTag("FirstName"),
                            label = {
                                Text(
                                    text = stringResource(id = R.string.profile_creation_first_name)
                                )
                            },
                            singleLine = true,
...

                        // Last name field

                        OutlinedTextField(
                            value = lastName,
                            onValueChange = { onLastNameChange(it) },
                            modifier = modifier.fillMaxWidth().testTag("LastName"),
                            label = {
                                Text(
                                    text = stringResource(id = R.string.profile_creation_last_name)
                                )
                            },
                            singleLine = true,
...
                                        withDismissAction = true
                                    )
                                }
                            }
                        }
                    },
                    modifier = modifier.fillMaxWidth().testTag("Save"),
                    enabled = isOnline
                ) {
                    Text(text = stringResource(id = R.string.save_button))
                }
            }
        }
...
