...
    }

    // Make the screen scrollable for small devices.
    val scrollState = rememberScrollState()

    Column(
        modifier = Modifier.testTag("login-screen").fillMaxHeight().verticalScroll(scrollState),
        horizontalAlignment = Alignment.CenterHorizontally,
        verticalArrangement = Arrangement.SpaceBetween,
    ) {
        if (state.isSignedOutOrError()) {
            AuthenticationScreenTitle(subtitle = stringResource(R.string.login_button))
        }
...
        modifier = Modifier.padding(vertical = 24.dp),
    ) {
        Text(stringResource(R.string.login_screen_don_t_have_an_account) + " ")
        Text(
            text = stringResource(R.string.register),
            color = MaterialTheme.colorScheme.primary,
            modifier = Modifier.clickable(onClick = onClick).testTag("register-button")
        )
    }
}

