<resources>
    <string name="app_name" translatable="false">echo</string>
    <string name="supabase_url" translatable="false">https://ulejnivguxeiibkbpwnb.supabase.co</string>
    <string name="supabase_public_key" translatable="false">eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InVsZWpuaXZndXhlaWlia2Jwd25iIiwicm9sZSI6ImFub24iLCJpYXQiOjE3MTA4MzgxODQsImV4cCI6MjAyNjQxNDE4NH0.9Hkj-Gox2XHcHfs_U2GyQFc9sZ_nu2Xs16-KYBri32g</string>
    <string name="google_web_client_id" translatable="false">442952145416-mfuc6f0h27oa7efapkrto4veguk0e62u.apps.googleusercontent.com</string>
    <string name="authentication_form_email_label">Email</string>
    <string name="authentication_form_password_label">Password</string>
    <string name="authentication_form_confirm_password_label">Confirm password</string>
    <string name="authentication_screen_sign_in_with_google">Sign in with Google</string>
    <string name="authentication_screen_google_logo_description" translatable="false">Google Logo</string>
    <string name="authentication_screen_sign_in_method_separator" translatable="false">OR</string>
    <string name="login_screen_don_t_have_an_account">Don\'t have an account?</string>
    <string name="login_button">Login</string>
...
